[gd_scene load_steps=23 format=2]

[ext_resource path="res://Assets/Art/Observation.png" type="Texture" id=1]
[ext_resource path="res://Assets/Fonts/Space_Grotesk/static/SpaceGrotesk-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://UI Pages/HomePage/HomePage.gd" type="Script" id=3]
[ext_resource path="res://UI Pages/InstructionPages/MemoryGame/MemoryGameInstructionPage.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI Pages/InstructionPages/ObservationGame/ObservationGameInstructionPage.tscn" type="PackedScene" id=5]
[ext_resource path="res://UI Pages/InstructionPages/JudgementGame/JudgementGameInstructionPage.tscn" type="PackedScene" id=6]
[ext_resource path="res://UI Pages/InstructionPages/ReactionGame/ReactionGameInstructionPage.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/Art/Reaction.png" type="Texture" id=8]
[ext_resource path="res://Assets/Art/Judgement.png" type="Texture" id=9]
[ext_resource path="res://Assets/Art/Memory.png" type="Texture" id=10]
[ext_resource path="res://Assets/Art/MemoryPressed.png" type="Texture" id=11]
[ext_resource path="res://Assets/Art/JudgementPressed.png" type="Texture" id=12]
[ext_resource path="res://Assets/Art/ObservationPressed.png" type="Texture" id=13]
[ext_resource path="res://Assets/Art/ReactionPressed.png" type="Texture" id=14]
[ext_resource path="res://UI Pages/HomePage/Options.gd" type="Script" id=15]
[ext_resource path="res://UI Pages/ProfilePage/ProfilePage.tscn" type="PackedScene" id=16]
[ext_resource path="res://Assets/Art/Statistic.PNG" type="Texture" id=17]
[ext_resource path="res://Assets/Art/StatisticPressed.png" type="Texture" id=18]
[ext_resource path="res://Assets/UI/New folder/kenneyUI-blue.tres" type="Theme" id=19]
[ext_resource path="res://Assets/Art/Profile.png" type="Texture" id=20]
[ext_resource path="res://UI Pages/HomePage/ScrollButton.gd" type="Script" id=21]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[node name="HomePage" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
memory_game_instruction_page = ExtResource( 4 )
reaction_game_instruction_page = ExtResource( 7 )
judgement_game_instruction_page = ExtResource( 6 )
observation_game_instruction_page = ExtResource( 5 )
profile_page = ExtResource( 16 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.7776, 0.88704, 0.96, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background2" type="ColorRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -1137.0
color = Color( 0.568627, 0.74902, 0.870588, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PageLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -86.5
margin_top = 33.0
margin_right = 86.5
margin_bottom = 115.0
rect_pivot_offset = Vector2( 111.764, 59.3268 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Home"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProfileButton" type="TextureButton" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 616.14
margin_top = 38.3592
margin_right = 688.14
margin_bottom = 110.359
size_flags_vertical = 3
texture_normal = ExtResource( 20 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="ScrollContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -328.0
margin_top = -497.0
margin_right = 328.0
margin_bottom = 640.0
theme = ExtResource( 19 )
scroll_horizontal_enabled = false
script = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Options"]
margin_right = 644.0
margin_bottom = 1600.0
rect_min_size = Vector2( 0, 1600 )
size_flags_horizontal = 3
custom_constants/separation = 10

[node name="Space" type="Label" parent="Options/VBoxContainer"]
margin_right = 644.0
margin_bottom = 18.0

[node name="MemoryGameButton" type="TextureButton" parent="Options/VBoxContainer"]
margin_top = 28.0
margin_right = 644.0
margin_bottom = 334.0
rect_min_size = Vector2( 500, 245 )
size_flags_vertical = 3
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 11 )
expand = true
stretch_mode = 5
script = ExtResource( 21 )

[node name="JudgementGameButton" type="TextureButton" parent="Options/VBoxContainer"]
margin_top = 344.0
margin_right = 644.0
margin_bottom = 650.0
rect_min_size = Vector2( 500, 245 )
size_flags_vertical = 3
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 12 )
expand = true
stretch_mode = 5
script = ExtResource( 21 )

[node name="ReactionGameButton" type="TextureButton" parent="Options/VBoxContainer"]
margin_top = 660.0
margin_right = 644.0
margin_bottom = 967.0
rect_min_size = Vector2( 500, 245 )
size_flags_vertical = 3
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 14 )
expand = true
stretch_mode = 5
script = ExtResource( 21 )

[node name="ObservationGameButton" type="TextureButton" parent="Options/VBoxContainer"]
margin_top = 977.0
margin_right = 644.0
margin_bottom = 1283.0
rect_min_size = Vector2( 500, 245 )
size_flags_vertical = 3
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 13 )
expand = true
stretch_mode = 5
script = ExtResource( 21 )

[node name="StatisticPageButton" type="TextureButton" parent="Options/VBoxContainer"]
margin_top = 1293.0
margin_right = 644.0
margin_bottom = 1600.0
rect_min_size = Vector2( 500, 245 )
size_flags_vertical = 3
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 18 )
expand = true
stretch_mode = 5
script = ExtResource( 21 )

[connection signal="pressed" from="ProfileButton" to="." method="_on_ProfileButton_pressed"]
